--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/finderjs"]
 	path = lib/finderjs
 	url = https://github.com/applait/finderjs.git
+[submodule "lib/zip.js"]
+	path = lib/zip.js
+	url = https://github.com/gildas-lormeau/zip.js.git
