--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/lie"]
 	path = lib/lie
 	url = https://github.com/calvinmetcalf/lie
+[submodule "lib/Font-Awesome"]
+	path = lib/Font-Awesome
+	url = https://github.com/FortAwesome/Font-Awesome.git
